# fun-with-nlp

./: README.md  docker-compose.yaml  main.py  pyproject.toml
artifacts/findings/lift/: grouped_top_5.json
artifacts/indexes/: post_1 Chronicles.json  post_1 Corinthians.json  post_1 John.json  post_1 Kings.json  post_1 Peter.json  post_1 Samuel.json  post_1 Thessalonians.json  post_1 Timothy.json  post_2 Chronicles.json  post_2 Corinthians.json  post_2 John.json  post_2 Kings.json  post_2 Peter.json  post_2 Samuel.json  post_2 Thessalonians.json  post_2 Timothy.json  post_3 John.json  post_Acts.json  post_Amos.json  post_Colossians.json  post_Daniel.json  post_Deuteronomy.json  post_Ecclesiastes.json  post_Ephesians.json  post_Esther.json  post_Exodus.json  post_Ezekiel.json  post_Ezra.json  post_Galatians.json  post_Genesis.json  post_Habakkuk.json  post_Haggai.json  post_Hebrews.json  post_Hosea.json  post_Isaiah.json  post_James.json  post_Jeremiah.json  post_Job.json  post_Joel.json  post_John.json  (+92 more)
