[project]
name = "bible-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "neo4j>=6.0.3",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "pip>=25.3",
    "rdflib>=7.5.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "spacy>=3.8.11",
    "wheel>=0.45.1",
]
